# lithium-cathode-ml

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/debug/: dashboard-warnings-errors.md  megnet-to-m3gnet-tensornet-migration.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
cathode_ml/: __init__.py  __main__.py  config.py  pipeline.py
cathode_ml/data/: __main__.py  aflow_fetcher.py  bdg_fetcher.py  cache.py  clean.py  fetch.py  jarvis_fetcher.py  mp_fetcher.py  oqmd_fetcher.py  schemas.py
cathode_ml/evaluation/: __init__.py  __main__.py  metrics.py  plots.py
cathode_ml/features/: __init__.py  composition.py  graph.py  split.py
cathode_ml/models/: __init__.py  baselines.py  cgcnn.py  m3gnet.py  megnet.py  (+7 more)
configs/: baselines.yaml  cgcnn.yaml  data.yaml  features.yaml  m3gnet.yaml  megnet.yaml  tensornet.yaml
dashboard/: app.py
data/: DATA_SOURCES.md
tests/: conftest.py  test_baselines.py  test_bdg_fetcher.py  test_cache.py  test_cgcnn.py  test_clean.py  test_composition.py  test_config.py  test_dashboard.py  test_dashboard_predict.py  test_data_validation.py  test_evaluation.py  test_graph.py  test_m3gnet.py  test_megnet.py  test_model_utils.py  test_mp_fetcher.py  test_oqmd_fetcher.py  test_pipeline.py  test_plots.py  test_split.py  test_tensornet.py  test_trainer.py
(+113 files in other folders)
